cmake_minimum_required(VERSION 3.26)
project(CppStudy)

set(CMAKE_CXX_STANDARD 11)

add_executable(CppStudy main.cpp
        pointer/func.cpp
        pointer/func.h
        pointer/main.cpp
        struct/test1.cpp
        struct/test2.cpp
        struct/test3.cpp
        struct/test4.cpp
        struct/test5.cpp
        struct/test6.cpp
        data_structure/Arrays_LinkList/arrays1.cpp
        adress-number-manage/main.cpp
        adress-number-manage/function.cpp
        adress-number-manage/function.h
        memory/test1.cpp
        memory/test2.cpp
        memory/test3.cpp
        memory/test4.cpp
        memory/test5.cpp
        memory/test6.cpp
        function/demo1.cpp
        class/demo1.cpp
        class/demo2.cpp
        class/demo3.cpp
        class/demo4.cpp
        class/demo5.cpp
        class/demo6.cpp
)
